--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an example for deploying a React + NodeJS app to Heroku",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
+    "build": "webpack -d ",
     "dev": "concurrently -k \"npm run frontend\" \"npm run backend\"",
     "frontend": "webpack -d --watch",
     "backend": "nodemon server.js",
